src/objects/SENS_Publish__c.object
<CustomObject>
    <description>Stores the transactional data when there is a change in Designation, a new referral is made or a member opt-out of CHN.  This data is consumed by eVisor and OMNI</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SENS Publish</relationshipLabel>
        <relationshipName>SENS_Publish</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advisor_Employee_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Advisor Employee ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor_MSID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Advisor MSID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Advisor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Big5_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Big5 Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Big5__c</fullName>
        <formula>First_Name__c + Last_Name__c + TEXT( DOB__c ) + Policy_ID__c  + Member_ID__c</formula>
        <label>Big5</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHN_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EFS Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHN_Referral_Identifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EFS Referral Identifier</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complex_Indicator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Complex Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designation_Changed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Designation Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Designation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrolled_Member_Identifier__c</fullName>
        <formula>CASESAFEID(Id) &amp; &quot;_&quot; &amp;  Policy_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrolled Member Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Date_Value__c</fullName>
        <formula>DATEVALUE( Enrollment_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrollment Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Family_Overview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Family Overview</label>
        <referenceTo>Family_Overview__c</referenceTo>
        <relationshipLabel>SENS Publish</relationshipLabel>
        <relationshipName>SENS_Publish</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Family_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Family Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Family_Contact_Into_Center__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Family Contact Into Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Data_Published_in_Topic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Data Published in Topic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Member ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_Record_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Publish Record Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_for_Referred__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason for Referred</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferralIndentifierHidden__c</fullName>
        <formula>CHN_Referral_Identifier__c +&apos;:&apos;+ Policy_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReferralIndentifierHidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retry_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a flag which is being used to retry to publish the failed sens publish records</description>
        <label>Retry Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SENS_Unique_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SENS Unique ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueTEST__c</fullName>
        <formula>TEXT( DOB__c ) + Policy_ID__c + Member_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueTEST</label>
        <type>Text</type>
    </fields>
    <label>SENS Publish</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CHN_Referral_Identifier__c</columns>
        <columns>CHN_Qualified__c</columns>
        <columns>SENS_Unique_ID__c</columns>
        <columns>Relationship__c</columns>
        <columns>Policy_ID__c</columns>
        <columns>EID__c</columns>
        <columns>Member_ID__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Enrollment_Date__c</columns>
        <columns>Family_Overview__c</columns>
        <columns>DOB__c</columns>
        <columns>Designation_Changed_Date__c</columns>
        <columns>Designation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CHN_Ref</fullName>
        <columns>NAME</columns>
        <columns>CHN_Referral_Identifier__c</columns>
        <columns>Complex_Indicator__c</columns>
        <columns>EID__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Member_ID__c</columns>
        <columns>Policy_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CHN_Referral_Identifier__c</field>
            <operation>equals</operation>
        </filters>
        <label>CHN Ref</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Is_Data_Published_to_Topic</fullName>
        <columns>NAME</columns>
        <columns>EID__c</columns>
        <columns>Big5__c</columns>
        <columns>Complex_Indicator__c</columns>
        <columns>Relationship__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Data_Published_in_Topic__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Is Data Published to Topic</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ManualReferrals_Vamshee</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>First_Name__c</columns>
        <columns>Advisor_Employee_ID__c</columns>
        <columns>CHN_Referral_Identifier__c</columns>
        <columns>Designation__c</columns>
        <columns>EID__c</columns>
        <columns>First_Family_Contact_Into_Center__c</columns>
        <columns>Family_Overview__c</columns>
        <columns>Member_ID__c</columns>
        <columns>Policy_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>First_Family_Contact_Into_Center__c</field>
            <operation>contains</operation>
            <value>Referral</value>
        </filters>
        <label>ManualReferrals-Vamshee</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Manual_Ref</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CHN_Referral_Identifier__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>EID__c</field>
            <operation>equals</operation>
        </filters>
        <label>Manual Ref</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>iS_Data_Published_False</fullName>
        <columns>NAME</columns>
        <columns>Retry_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Data_Published_in_Topic__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>iS Data Published False</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>SENS Publish Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SENS Publish</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>